# py-Repo-Meta

./: .gitignore  README.md  out_test.pyi  pyproject.toml
repometa/: check_db.py  main.py  output.pyi  pyproject.toml  setup_project.sh
repometa/docs/requirements/: requirement_v1.md  requirements_2.md
repometa/formatter/: base.py  pyi.py
repometa/models/: ir.py
repometa/scripts/: preview_json.py  verify_db.py
repometa/src/: test_app.py
repometa/src/models/: schemas.py
repometa/src/parser/: engine.py  visitor.py
repometa/src/prmg/core/: extension.py  models.py  parser.py  scanner.py  tracker.py
repometa/src/prmg/formatter/: base.py  pyi.py
repometa/src/prmg/models/: ir.py
repometa/src/prmg/parser/: __init__.py  ast_parser.py  base.py
repometa/src/prmg/storage/: models.py  query.py  storage.py
repometa/src/repometa/: __init__.py  cli.py  db.py  parser.py  views.py
repometa/tests/: test_parser.py  test_parser_ac.py
repometa/tests/fixtures/: complex_module.py  inherit_test.py
